--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <title>Test</title>
 </head>
 <body>
-
+<a href="body-scroll.html">根节点body滑动加载</a>
+<!--<a href="body-scroll.html">根节点body点击加载</a>-->
+<a href="inner-scroll.html">非body滑动加载</a>
 </body>
 <script src="bower_components/jquery/jquery.js"></script>
+<script src="js/jsrender.min.js"></script>
 <script src="js/wxy.paging.js"></script>
 <script>
 
